Changed dependencies to create an application